# mongoclass

./: .coveragerc  .gitignore  Makefile  pyproject.toml  pytest.ini  ruff.toml  t.py  tox.ini
docs/: conf.py  reference.md  requirements.txt
mongoclass/: __init__.py  client.py
src/mongodata/: client.py  cursor.py
tests/: utils.py
tests/mongita/: test_basic.py  test_cursor.py  test_insert.py
tests/mongoclass/: test_is_testing.py  test_mongodb.py
tests/pymongo/: test_basic.py  test_cursor.py
