[project]
name = "python-mongoclass"
version = "0.1.29"
description = "mongoclass"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "dnspython >= 2.2.1, <3",
    "furl >= 2.1.3, <3",
    "mongita >= 1.1.1, <2",
    "pymongo >= 4.5.0, <5",
    "redis >= 5.0.0, <6",
    "requests >= 2.31.0, <3",
    "rich >= 13.5.2, <14",
]
[project.optional-dependencies]
dev = [
    "icecream",
    "ipython",
    "ipython-suggestions",
    "restmagic",
    "mypy",
    "pip-tools",
    "pyflyby",
    "twine",
]

tests = [
    "coverage[toml] >=6, <7",
    "pytest >=7, <8",
    "pytest-cov >=4, <5",
    "pytest-doctestplus >=0.13, <1",
    "pytest-lazy-fixture ~=0.6.3",
    "pytest-mock >=3, <4",
    "pytest-remotedata >=0.4.0, <1",
    "pytest-sugar >=0.9.7, <1",
    "pytest-xdist >=2, <3",
    "tox >=4.6.4, <5",
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[build-system]
requires = ['setuptools', 'setuptools_scm>=6.2', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.coverage.report]
skip_empty = true
[tool.coverage.html]
directory = "coverage_html_report"
[tool.coverage.run]
branch = true
source = ["mongoclass"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39, 310, 311, 312dev}
isolated_build = True
skip_missing_interpreters = true
[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312-dev

[testenv]
passenv =
    ATLAS_PRIVATE_KEY_MNOPI
    ATLAS_PASSWORD
    ATLAS_PUBLIC_KEY_MNOPI
    ATLAS_USER
commands = python -m unittest
deps =
    ipython
    coverage[toml]
    pytest
    pytest_cov
    pytest-doctestplus
    pytest-lazy-fixture
    pytest-mock
    pytest-remotedata
    pytest-sugar
    pytest-xdist
"""
[tool.pytest.ini_options]
addopts = [
    "--doctest-plus",
    "--doctest-rst",
    "--doctest-ufunc",
    "--remote-data",
    '--full-trace',
    '--showlocals',
    '--strict-markers',
    '--tb=long',
    '-rAs', # “-r: short test summary info”, "-A: for all status.
    '--verbosity=4',
]
console_output_style = "progress-even-when-capture-no"
doctest_plus = "enabled" # https://github.com/scientific-python/pytest-doctestplus
doctest_optionflags = [
    "ELLIPSIS",
    "FLOAT_CMP",
    'IGNORE_EXCEPTION_DETAIL',
    "IGNORE_WARNINGS",
    "NORMALIZE_WHITESPACE"
]
log_level = 'ERROR'
testpaths = [
    "mongoclass"
]

