[project]
name = "mongodata"
dynamic = ["version"]
description = "mongodata"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dnspython >= 2.2.1, <3",
    "furl >= 2.1.3, <3",
    "huti >= 0.1.15, <1",
    "mongita >= 1.1.1, <2",
    "pymongo >= 4.5.0, <5",
    "redis >= 5.0.0, <6",
    "requests >= 2.31.0, <3",
    "rich >= 13.5.2, <14",
]
[project.optional-dependencies]
dev = [
    "icecream",
    "ipython",
    "ipython-suggestions",
    "restmagic",
    "mypy",
    "pip-tools",
    "pyflyby",
    "ruff",
    "twine",
]

tests = [
    "coverage[toml] >=6, <7",
    "pytest >=7, <8",
    "pytest-cov >=4, <5",
    "pytest-doctestplus >=0.13, <1",
    "pytest-lazy-fixture ~=0.6.3",
    "pytest-mock >=3, <4",
    "pytest-remotedata >=0.4.0, <1",
    "pytest-sugar >=0.9.7, <1",
    "pytest-xdist >=2, <3",
    "tox >=4.6.4, <5",
]

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default

[build-system]
requires = ['setuptools', 'setuptools_scm>=6.2', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
