[project]
dependencies = [
    "dnspython >= 2.2.1, <3",
    "furl >= 2.1.3, <3",
    "huti >= 0.1.15, <1",
    "mongita >= 1.1.1, <2",
    "nodeps[pretty]",
    "pymongo >= 4.5.0, <5",
    "redis >= 5.0.0, <6",
    "requests >= 2.31.0, <3",
]
description = "A basic ORM like interface for mongodb in python."
dynamic = ["version"]
name = "mongodata"
readme = "README.md"
requires-python = ">=3.11"
[[project.authors]]
name = "José Antonio Puértolas Montañés"
email = "63794670+j5pu@users.noreply.github.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "nodeps[all,dev]",
]


[project.urls]
Homepage = "https://github.com/j5pu/mongodata"

[build-system]
requires = ['setuptools', 'setuptools_scm>=6.2', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
